--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@ src/*.dll
 .Rdata
 .rdb
 .rdx
-GLASSO.Rproj
-docs/GLASSO_cache/html/*.rdb
-docs/GLASSO_cache/html/*.rdx
-docs/GLASSO_cache/html/*.Rdata
-docs/GLASSO_cache/latex/*.rdb
-docs/GLASSO_cache/latex/*.rdx
-docs/GLASSO_cache/latex/*.Rdata
-docs/GLASSO_cache/markdown_github/*.rdb
-docs/GLASSO_cache/markdown_github/*.rdx
-docs/GLASSO_cache/markdown_github/*.Rdata
+GLASSOO.Rproj
+docs/GLASSOO_cache/html/*.rdb
+docs/GLASSOO_cache/html/*.rdx
+docs/GLASSOO_cache/html/*.Rdata
+docs/GLASSOO_cache/latex/*.rdb
+docs/GLASSOO_cache/latex/*.rdx
+docs/GLASSOO_cache/latex/*.Rdata
+docs/GLASSOO_cache/markdown_github/*.rdb
+docs/GLASSOO_cache/markdown_github/*.rdx
+docs/GLASSOO_cache/markdown_github/*.Rdata
