site will now be published on gh-pages branch

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ docs/GLASSOO_cache/markdown_github/*.rdb
 docs/GLASSOO_cache/markdown_github/*.rdx
 docs/GLASSOO_cache/markdown_github/*.Rdata
 inst/doc
+docs
