--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ LinkingTo: Rcpp,
     RcppProgress
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    pkgdown
 SystemRequirements: GNU make
 VignetteBuilder: knitr
