--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,7 +2,7 @@ pandoc: 1.19.2.1
 pkgdown: 1.0.0
 pkgdown_sha: ~
 
-title: CVglasso
+title: GLASSOO
 url: https://mgallow.github.io/GLASSOO/
 template:
   params:
