--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -21,18 +21,22 @@ navbar:
   left:
     - icon: fa-home fa-lg
       href: index.html
-    #- text: "Tutorial"
-     # href: articles/Tutorial.html
+    - text: "Tutorial"
+      href: articles/Tutorial.html
+    - text: "Benchmark"
+      href: articles/Benchmark.html
     - text: "Functions"
       href: reference/index.html
     - text: "Related Packages"
       menu:
-        - text: "Omega"
-          href: https://mgallow.github.io/Omega/
+        #- text: "Omega"
+        #  href: https://mgallow.github.io/Omega/
         - text: "ADMMsigma"
           href: https://mgallow.github.io/ADMMsigma/
         - text: "CVglasso"
           href: https://mgallow.github.io/CVglasso/
+        - text: "SCPME"
+          href: https://mgallow.github.io/SCPME/
   right:
     - icon: fa-newspaper-o fa-lg
       #text: "News"
